--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -61,11 +61,11 @@
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="buttons">
-            <a class="button is-primary button-main-color">
+            <a (click)="register()" class="button is-primary button-main-color">
               <strong>Registrarse</strong>
             </a>
-            <a class="button is-light button-main-text-color">
-              Inicio sesión
+            <a (click)="login()" class="button is-light button-main-text-color" >
+              Iniciar Sesión
             </a>
           </div>
         </div>
