--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+.button-main-color
+  background-color: #175676 !important
+.button-main-text-color
+  color: #175676 !important
+.navbar-link:hover
+  color: #175676 !important
+
+
+// #175676
