Ajustes en el inicio de sesión

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'ngx-toastr/toastr'
 .button-main-color
   background-color: #175676 !important
 .button-main-text-color
@@ -6,6 +7,8 @@
 .navbar-link:hover
   color: #175676 !important
 
+// regular style toast
+  
 
 // #175676
 
