--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,11 +15,7 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item">
-          Inicio
-        </a>
-
-        <div class="navbar-item has-dropdown is-hoverable">
+        <div class="navbar-item has-dropdown is-hoverable" *ngIf="hideMenu()">
           <a class="navbar-link">
             Hoteles
           </a>
@@ -34,7 +30,7 @@
           </div>
         </div>
 
-        <div class="navbar-item has-dropdown is-hoverable">
+        <div class="navbar-item has-dropdown is-hoverable" *ngIf="hideMenu()">
           <a class="navbar-link">
             Reservas
           </a>
@@ -46,16 +42,10 @@
             <a class="navbar-item">
               Listado
             </a>
-<!--            <a class="navbar-item">-->
-<!--              -->
-<!--            </a>-->
-           <!-- <hr class="navbar-divider"> -->
-<!--            <a class="navbar-item">
-              Reportar un problema
-            </a>
-            -->
           </div>
         </div>
+
+
       </div>
 
       <div class="navbar-end">
